# rayleigh

./: README.md  pyproject.toml
rayleigh/: __init__.py  cli.py  conduct_exp.py  config.py  init.py  process_outputs.py  queue.py  r_analysis.py  review.py  spec.py  trundlr.py
rayleigh/templates/: EXPERIMENTS.md.tmpl  PLANNING.md.tmpl  PROGRESS.md.tmpl  experiments.yaml.tmpl  gitignore.tmpl  rayleigh.yaml.tmpl
