[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rayleigh"
version = "0.1.0"
description = "Experiment designer & runner in the ra* family — designs, conducts, and writes up experiments against a codebase."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6",
    "pandas>=1.3",       # process_outputs: tidy cell table; reads R's CSV outputs for the report
    "python-docx>=0.8",  # process_outputs: the .docx write-up (degrades if absent)
]

[project.optional-dependencies]
# conduct_exp's `kind: sobol` (continuous) designs use scipy's scrambled Sobol sequence for
# space-filling draws. Optional: without scipy, conduct_exp falls back to a numpy Latin-Hypercube
# sampler (both deterministic in the design seed). Install with: pip install 'rayleigh[sobol]'.
sobol = ["scipy>=1.7"]
# EXTERNAL (non-Python) requirement: process_outputs generates + runs a base-R + ggplot2 analysis
# script (rayleigh.r_analysis). Machines that run it need R with ggplot2 installed. Without R,
# process_outputs still writes the tidy data + the .R script (re-run when R is available).

[project.scripts]
rayleigh = "rayleigh.cli:main"

[tool.setuptools.packages.find]
include = ["rayleigh*"]

[tool.setuptools.package-data]
rayleigh = ["templates/*.tmpl"]
